--- a/viewer/Views/Home/Index.cshtml
+++ b/viewer/Views/Home/Index.cshtml
@@ -4,59 +4,85 @@
 
 <h1>Azure Event Grid Viewer</h1>
 
-<div>
-    <a href="#" id="clear-events">clear</a>
-</div>
-
+<div><a href="#" id="clear-events">clear</a></div>
 <hr />
-<div id="events-container"></div>
 
+<table id="grid-events" class="table table-striped">
+  <thead>
+    <th>&nbsp;</th>
+    <th>Event Type</th>
+    <th>Subject</th>
+  </thead>
+  <tbody id="grid-event-details"></tbody>
+</table>
+
+<script id="event-template" type="text/x-handlebars-template">  
+	<tr data-toggle="collapse" data-target="#event-{{gridEventId}}" class="accordian-toggle">
+        <td>        
+            <button class="btn btn-default btn-xs">
+            <span class="glyphicon glyphicon-eye-open"></span>
+        </button></td>
+        <td>{{gridEventType}}</td>
+        <td>{{gridEventSubject}}</td>
+  </tr>
+  <tr>
+        <td colspan="3" class="hiddenRow">
+            <span class="accordian-body collapse" id="event-{{gridEventId}}">
+                <pre class="prettyprint lang-js">
+                    {{gridEvent}}
+                </pre>
+            </span>
+   	    </td>
+    </tr>  
+</script>
+
+<div id="events-container"></div>
 
 @section scripts {
 
     <script src="~/lib/signalr.min.js" type="text/javascript"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <script type="text/javascript">
 
         var hubConnection;
         var clearEvents;
         var events;
+        var eventsTable;
                
         var clear = function(){
             console.log('clear');
-            events.innerHTML = '';
+            //events.innerHTML = '';
+            $("#grid-events").find("tr:gt(0)").remove();
         }
 
-        var addEvent = function(header, data){
-                console.log('gridupdate method invoked');
-                var eventElement = document.createElement('pre');
-                eventElement.className += "prettyprint lang-js";
-                eventElement.innerHTML = data;
-                events.insertBefore(eventElement, events.childNodes[0]);  
-
-
-                //var test = $('<pre class="prettyprint lang-js">' + data + '</pre>').hide();
-                //$("#events-container").prepend(test);
-                //test.fadeIn(500);
+        var addEvent = function(id, eventType, subject, eventTime, data){
+                
+                var context = { 
+                    gridEventType: eventType,
+                    gridEventSubject: subject,
+                    gridEventId: id,
+                    gridEvent: data
+                };                
+                var source = document.getElementById('event-template').innerHTML;
+                var template = Handlebars.compile(source);    
+                var html = template(context);                
+                $('#grid-event-details').prepend(html);             
         }
     
-        var initialize = function(){
-            // get dom elements and register listeners
-            clearEvents = document.getElementById('clear-events');
-            events = document.getElementById('events-container');
+        var initialize = function(){            
+            clearEvents = document.getElementById('clear-events');            
             clearEvents.addEventListener('click', function(){
                clear();
             });
-    
-            // initialize and start the hub connection
+                
             hubConnection = new signalR.HubConnection('hubs/gridevents');
             hubConnection.start().then(function(){
                 console.log('connection started');
             });
-
-            // handle update from hub
-            hubConnection.on('gridupdate', function(header, data){
-                addEvent(header, data);
+    
+            hubConnection.on('gridupdate', function(id, eventType, subject, eventTime, data){
+                addEvent(id, eventType, subject, eventTime, data);
             });
         };  
 
