--- a/viewer/Views/Home/Index.cshtml
+++ b/viewer/Views/Home/Index.cshtml
@@ -2,9 +2,12 @@
     ViewData["Title"] = "Azure Event Grid Viewer";
 }
 
-<h1>Azure Event Grid Viewer</h1>
+<h1>
+    <img src="~/images/eventgrid.png" height="47" width="90" alt="Azure Event Grid" />
+    Azure Event Grid Viewer
+</h1>
 
-<div><a href="#" id="clear-events">clear</a></div>
+<!--<div><a href="#" id="clear-events">clear</a></div>-->
 <hr />
 
 <table id="grid-events" class="table table-striped">
@@ -19,19 +22,19 @@
 <script id="event-template" type="text/x-handlebars-template">  
 	<tr data-toggle="collapse" data-target="#event-{{gridEventId}}" class="accordian-toggle">
         <td>        
-            <button class="btn btn-default btn-xs">
+            <button class="btn btn-primary btn-xs">
             <span class="glyphicon glyphicon-eye-open"></span>
         </button></td>
         <td>{{gridEventType}}</td>
         <td>{{gridEventSubject}}</td>
   </tr>
-  <tr>
-        <td colspan="3" class="hiddenRow">
-            <span class="accordian-body collapse" id="event-{{gridEventId}}">
+  <tr class="hiddenRow collapse" id="event-{{gridEventId}}">
+        <td colspan="12" >
+            <div class="accordian-body">
                 <pre class="prettyprint lang-js">
                     {{gridEvent}}
                 </pre>
-            </span>
+            </div>
    	    </td>
     </tr>  
 </script>
@@ -39,7 +42,6 @@
 <div id="events-container"></div>
 
 @section scripts {
-
     <script src="~/lib/signalr.min.js" type="text/javascript"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
@@ -56,8 +58,7 @@
             $("#grid-events").find("tr:gt(0)").remove();
         }
 
-        var addEvent = function(id, eventType, subject, eventTime, data){
-                
+        var addEvent = function(id, eventType, subject, eventTime, data){                
                 var context = { 
                     gridEventType: eventType,
                     gridEventSubject: subject,
@@ -72,9 +73,9 @@
     
         var initialize = function(){            
             clearEvents = document.getElementById('clear-events');            
-            clearEvents.addEventListener('click', function(){
-               clear();
-            });
+            //clearEvents.addEventListener('click', function(){
+               //clear();
+            //});
                 
             hubConnection = new signalR.HubConnection('hubs/gridevents');
             hubConnection.start().then(function(){
