--- a/viewer/Views/Home/Index.cshtml
+++ b/viewer/Views/Home/Index.cshtml
@@ -52,13 +52,8 @@
     <script type="text/javascript">
 
         var hubConnection;
-        var clearEvents;
-        var events;
-        var eventsTable;
-        var gridEvents;
                
         var clear = function(){
-            console.log('clear');
             $("#grid-events").find("tr:gt(0)").remove();
             $("#grid-events").hide();
         }
@@ -80,7 +75,7 @@
     
         var initialize = function(){    
             $("#grid-events").hide();        
-            clearEvents = document.getElementById('clear-events');                      
+            var clearEvents = document.getElementById('clear-events');                      
             clearEvents.addEventListener('click', function(){
                clear();
             });
@@ -95,7 +90,6 @@
             });
         };  
 
-    
         $(document).ready(function(){            
             initialize();
         });        
