--- a/viewer/Views/Home/Index.cshtml
+++ b/viewer/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Azure Event Grid Viewer";
 }
 
-<div>    
+<div>
     <p style="float: left; font-size: 24px;" class="lead">
         <img src="~/images/eventgrid.png" height="47" width="90" alt="Azure Event Grid" />
         <strong>Azure Event Grid Viewer</strong>
@@ -17,83 +17,86 @@
 <hr /><br /><br />
 
 <table id="grid-events" class="table table-striped">
-  <thead>
+    <thead>
     <th>&nbsp;</th>
     <th>Event Type</th>
     <th>Subject</th>
-  </thead>
-  <tbody id="grid-event-details"></tbody>
+    </thead>
+    <tbody id="grid-event-details"></tbody>
 </table>
 
-<script id="event-template" type="text/x-handlebars-template">  
-	<tr data-toggle="collapse" data-target="#event-{{gridEventId}}" class="accordian-toggle">
-        <td>        
+<script id="event-template" type="text/x-handlebars-template">
+    <tr data-toggle="collapse" data-target="#event-{{gridEventId}}" class="accordian-toggle">
+        <td>
             <button class="btn btn-primary btn-xs">
-            <span class="glyphicon glyphicon-eye-open"></span>
-        </button></td>
+                <span class="glyphicon glyphicon-eye-open"></span>
+            </button>
+        </td>
         <td>{{gridEventType}}</td>
         <td>{{gridEventSubject}}</td>
-  </tr>
-  <tr class="hiddenRow collapse" id="event-{{gridEventId}}">
-        <td colspan="12" >
+    </tr>
+    <tr class="hiddenRow collapse" id="event-{{gridEventId}}">
+        <td colspan="12">
             <div class="accordian-body">
-                <pre class="prettyprint">
-                    {{gridEvent}}
-                </pre>
+                <pre><code class="nohighlight">{{gridEvent}}</code></pre>
             </div>
-   	    </td>
-    </tr>  
+        </td>
+    </tr>
 </script>
 
 @section scripts {
     <script src="~/lib/signalr.min.js" type="text/javascript"></script>
-    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+
     <script type="text/javascript">
 
         var hubConnection;
-               
-        var clear = function(){
+
+        var clear = function () {
             $("#grid-events").find("tr:gt(0)").remove();
             $("#grid-events").hide();
         }
 
-        var addEvent = function(id, eventType, subject, eventTime, data){                
-                var context = { 
-                    gridEventType: eventType,
-                    gridEventSubject: subject,
-                    gridEventId: id,
-                    gridEvent: data
-                };                
-                var source = document.getElementById('event-template').innerHTML;
-                var template = Handlebars.compile(source);    
-                var html = template(context);               
+        var addEvent = function (id, eventType, subject, eventTime, data) {
+            var context = {
+                gridEventType: eventType,
+                gridEventSubject: subject,
+                gridEventId: id,
+                gridEvent: data
+            };
+            var source = document.getElementById('event-template').innerHTML;
+            var template = Handlebars.compile(source);
+            var html = template(context);
 
-                $("#grid-events").show(); 
-                $('#grid-event-details').prepend(html);             
+            $("#grid-events").show();
+            $('#grid-event-details').prepend(html);
         }
-    
-        var initialize = function(){    
-            $("#grid-events").hide();        
-            var clearEvents = document.getElementById('clear-events');                      
-            clearEvents.addEventListener('click', function(){
-               clear();
+
+        var initialize = function () {
+            $("#grid-events").hide();
+            var clearEvents = document.getElementById('clear-events');
+            clearEvents.addEventListener('click', function () {
+                clear();
             });
-                
-            hubConnection = new signalR.HubConnection('hubs/gridevents');
-            hubConnection.start().then(function(){
-                console.log('connection started');
-            });
-    
-            hubConnection.on('gridupdate', function(id, eventType, subject, eventTime, data){
+
+            hubConnection = new signalR.HubConnectionBuilder()
+                .withUrl("hubs/gridevents")
+                .configureLogging(signalR.LogLevel.Information)
+                .build();
+
+            hubConnection.start().catch(err => console.error(err.toString()));
+            hubConnection.on('gridupdate', function (id, eventType, subject, eventTime, data) {
                 addEvent(id, eventType, subject, eventTime, data);
             });
-        };  
+        };
 
-        $(document).ready(function(){            
+        $(document).ready(function () {
             initialize();
-        });        
-    
+        });
+
     </script>
 
 }
